# sudoku-solver

./: .gitattributes  .gitignore  README.md  hk.pkl  infeasible.csv  mise.toml  pyproject.toml  sudoku-solver.py
